--- a/app/src/main/res/layout/settings_card.xml
+++ b/app/src/main/res/layout/settings_card.xml
@@ -8,20 +8,26 @@
     card_view:cardUseCompatPadding="true"
     card_view:cardElevation="6dp">
 
+    <TextView
+        android:id="@+id/card_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        style="@style/ShadowBlackTextWhite"
+        android:text="@string/settings"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/card_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            style="@style/ShadowBlackTextWhite"
-            android:text="@string/settings"
-            android:textSize="24sp"
-            android:textStyle="bold" />
 
         <Switch
             android:layout_width="match_parent"
@@ -36,6 +42,46 @@
             android:layout_height="wrap_content"
             android:padding="16dp"
             android:id="@+id/parallax_enabled"
+            style="@style/ShadowBlackTextWhite"
+            android:text="@string/parallax_enabled" />
+
+        <Switch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:id="@+id/parallax_enabled23"
+            style="@style/ShadowBlackTextWhite"
+            android:text="@string/parallax_enabled" />
+
+        <Switch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:id="@+id/parallax_enabled123"
+            style="@style/ShadowBlackTextWhite"
+            android:text="@string/parallax_enabled" />
+
+        <Switch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:id="@+id/parallax_enabled3"
+            style="@style/ShadowBlackTextWhite"
+            android:text="@string/parallax_enabled" />
+
+        <Switch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:id="@+id/parallax_enabled2"
+            style="@style/ShadowBlackTextWhite"
+            android:text="@string/parallax_enabled" />
+
+        <Switch
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp"
+            android:id="@+id/parallax_enabled4"
             style="@style/ShadowBlackTextWhite"
             android:text="@string/parallax_enabled" />
 
@@ -133,4 +179,6 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/reset_defaults" />
     </LinearLayout>
+
+    </ScrollView>
 </android.support.v7.widget.CardView>
