Attributes for gap.

--- a/cardstack/src/main/res/values/attrs.xml
+++ b/cardstack/src/main/res/values/attrs.xml
@@ -3,7 +3,7 @@
     <declare-styleable name="CardStackLayout">
         <attr name="parallax_enabled" format="boolean" />
         <attr name="parallax_scale" format="integer" />
-        <attr name="card_gap" format="dimension" />
+        <attr name="card_gap_top" format="dimension" />
         <attr name="card_gap_bottom" format="dimension" />
         <attr name="showInitAnimation" format="boolean" />
     </declare-styleable>
