--- a/cardstack/src/main/res/values/dimens.xml
+++ b/cardstack/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="card_gap_top">20dp</dimen>
     <dimen name="card_gap_bottom">20dp</dimen>
+    <dimen name="card_touch_height">100dp</dimen>
     <dimen name="dp30">30dp</dimen>
     <dimen name="dp8">8dp</dimen>
     <dimen name="dp10">10dp</dimen>
