--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -21,5 +21,6 @@
         android:shadowColor="@android:color/black"
         android:textColor="@android:color/white"
         android:textStyle="bold"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:background="#000000"/>
 </android.support.v7.widget.CardView>
