--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -18,5 +18,5 @@
         android:textColor="@android:color/white"
         android:textStyle="bold"
         android:textSize="24sp"
-        android:background="#000000"/>
+        android:background="#00000000"/>
 </android.support.v7.widget.CardView>
